fixed vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,15 @@
   "framework": "vite",
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
       "src": "/images/(.*)",
       "dest": "/images/$1"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
