Fixing vercel videos second try

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,24 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "headers": [
+    {
+      "source": "/images/performers/(.*)\\.mp4",
+      "headers": [
+        { "key": "Content-Type", "value": "video/mp4" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Cache-Control", "value": "public, max-age=604800" }
+      ]
+    },
+    {
+      "source": "/images/performers/(.*)\\.mov",
+      "headers": [
+        { "key": "Content-Type", "value": "video/quicktime" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Cache-Control", "value": "public, max-age=604800" }
+      ]
+    }
+  ],
   "routes": [
     {
       "src": "/assets/(.*)",
@@ -9,16 +27,10 @@
     },
     {
       "src": "/images/performers/(.*)\\.mp4$",
-      "headers": {
-        "Content-Type": "video/mp4"
-      },
       "dest": "/images/performers/$1.mp4"
     },
     {
       "src": "/images/performers/(.*)\\.mov$",
-      "headers": {
-        "Content-Type": "video/quicktime"
-      },
       "dest": "/images/performers/$1.mov"
     },
     {
